# TimelineEditor

./: .gitignore  README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/watermark/: crop_watermark.py
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/timeline/: CPUWatermarkFilter.cpp  CPUWatermarkFilter.h  EGLContextManager.cpp  EGLContextManager.h  FilterGLRender.h  HistogramEqualizationFilter.cpp  HistogramEqualizationFilter.h  NativeRender.cpp  NativeRender.h  Timeline.cpp  Timeline.h  TimelineClip.cpp  TimelineClip.h  TimelineEditor.cpp  TimelineEditor.h  TimelineEditorJNI.cpp  TimelineEncoder.cpp  TimelineEncoder.h  TimelineGLRender.cpp  TimelineGLRender.h  VideoFilter.cpp  VideoFilter.h  WatermarkFilter.cpp  WatermarkFilter.h
app/src/main/cpp/util/: LogUtil.h
app/src/main/java/com/lionel/timelineeditor/: TimelineEditor.java  TimelineEditorActivity.java
app/src/main/res/layout/: activity_timeline_editor.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
